--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   "author": "Brian McMinn <brianmsj@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "cross-env": "^3.1.4",
-    "express": "^4.14.1",
-    "http-proxy-middleware": "^0.17.3",
+    "cross-env": "^3.2.4",
+    "express": "^4.15.2",
+    "http-proxy-middleware": "^0.17.4",
     "jquery": "^3.2.1",
     "npm-run-all": "^4.0.1",
+    "react": "^15.4.2",
     "react-router": "^4.0.0",
     "xp": "^1.0.1"
   }
