--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "npm-run-all": "^4.0.1",
     "react": "^15.4.2",
     "react-router": "^4.0.0",
+    "socket.io": "^1.7.3",
     "xp": "^1.0.1"
   }
 }
