--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^4.9.2",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http-bearer": "^1.0.1",
+    "socket.io": "^1.7.3"
   }
 }
