--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-social-login": "^2.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "socket.io": "^1.7.3"
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
