--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^15.4.2",
     "react-router": "^4.0.0",
     "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
     "xp": "^1.0.1"
   }
 }
