--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "http-proxy-middleware": "^0.17.4",
     "jquery": "^3.2.1",
     "npm-run-all": "^4.0.1",
+    "passport": "^0.3.2",
     "react": "^15.4.2",
     "react-router": "^4.0.0",
     "socket.io": "^1.7.3",
